# absolute-solver

./: Cargo.toml
assets/: solver.blend
res/absolute_solver/: solver.glb
src/: main.rs  mover.rs  ring.rs  selection.rs
