[package]
name = "absolute-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.29", features = ["mint"] }
# stardust-xr-asteroids = { git = "http://github.com/StardustXR/asteroids.git", branch = "dev", version = "2.0.0" }
stardust-xr-fusion = { git = "http://github.com/StardustXR/core.git", branch = "dev", version = "0.45.0" }
stardust-xr-molecules = { git = "http://github.com/StardustXR/molecules.git", branch = "dev", version = "0.45.0" }
tokio = { version = "1.47.1", features = ["full"] }
