[package]
name = "absolute-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30", features = ["mint"] }
# stardust-xr-asteroids = { git = "http://github.com/StardustXR/asteroids.git", branch = "dev", version = "2.0.0" }
stardust-xr-fusion = { version = "0.51.0" }
stardust-xr-molecules = { version = "0.51.0" }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
